# dim2mon

./: CMakeLists.txt
cmake/: FindDIM.cmake
src/: Dim2Mon.cxx  Dim2Mon.h
